rotating issue solving

--- a/src/components/User/Home.css
+++ b/src/components/User/Home.css
@@ -1,18 +1,14 @@
-@media (max-width: 768px) { 
-    @media screen and (orientation: landscape) {
-      body {
-        overflow: hidden;
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        overflow: hidden;
-      }
-    }
-  }
-  
-  @media screen and (orientation: portrait) {
+@media (max-width: 640px) {
     body {
-      overflow: auto;
+        overflow: hidden;
+        /* Prevents scrolling */
+        position: fixed;
+        /* Fixes the position */
+        width: 100vw;
+        /* Ensures full width */
+        height: 100vh;
+        /* Ensures full height */
+        transform: rotate(0deg);
+        /* Ensures no rotation */
     }
-  }
-  
+}
